--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           REQUIRE_CYTHON: 1
         run: poetry install --only=main,dev
       - name: Test with Pytest
-        run: poetry run pytest --durations=20 --timeout=60 -v --cov=src --cov-branch --cov-report xml --cov-report html --cov-report term-missing tests
+        run: poetry run pytest --durations=20 -v --cov=src --cov-branch --cov-report xml --cov-report html --cov-report term-missing tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
