--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
+          - "3.7"
           - "3.8"
           - "3.9"
           - "3.10"
@@ -43,22 +44,31 @@ jobs:
           - "3.12"
         os:
           - ubuntu-latest
-          - windows-latest
-          - macOS-latest
+        extension:
+          - "skip_cython"
+          - "use_cython"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: snok/install-poetry@v1.3.4
-      - name: Install Dependencies
-        run: poetry install
-        shell: bash
+          cache: "poetry"
+      - name: Install Dependencies no cython
+        if: ${{ matrix.extension == 'skip_cython' }}
+        env:
+          SKIP_CYTHON: 1
+        run: poetry install --only=main,dev
+      - name: Install Dependencies with cython
+        if: ${{ matrix.extension != 'skip_cython' }}
+        env:
+          REQUIRE_CYTHON: 1
+        run: poetry install --only=main,dev
       - name: Test with Pytest
-        run: poetry run pytest --cov-report=xml
-        shell: bash
+        run: poetry run pytest --durations=20 -v --cov=src --cov-branch --cov-report xml --cov-report html --cov-report term-missing tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
