--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ packages = [
 "Bug Tracker" = "https://github.com/bdraco/cached-ipaddress/issues"
 "Changelog" = "https://github.com/bdraco/cached-ipaddress/blob/main/CHANGELOG.md"
 
+[tool.poetry.build]
+generate-setup-file = true
+script = "build_ext.py"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 
@@ -125,5 +129,6 @@ module = "tests.*"
 allow_untyped_defs = true
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+# 1.5.2 required for https://github.com/python-poetry/poetry/issues/7505
+requires = ['setuptools>=65.4.1', 'wheel', 'Cython>=3.0.5', "poetry-core>=1.5.2"]
 build-backend = "poetry.core.masonry.api"
