--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
+          - "3.13"
         os:
           - ubuntu-latest
         extension:
@@ -56,6 +57,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: "poetry"
+          allow-prereleases: true
       - name: Install Dependencies no cython
         if: ${{ matrix.extension == 'skip_cython' }}
         env:
