--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ script = "build_ext.py"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+propcache = ">=0.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
